Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1171,37 +1171,7 @@
     }
    ],
    "source": [
-    "len(unique_travel_cities)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Buenos Aires',\n",
-       " 'Greenville',\n",
-       " 'Iguazu Falls',\n",
-       " 'Los Cabos',\n",
-       " 'Marakesh',\n",
-       " 'Salina Island',\n",
-       " 'Solta',\n",
-       " 'Toronto',\n",
-       " 'Walla Walla Valley'}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique_travel_cities"
+    "len(unique_travel_cities)"
    ]
   },
   {
